--- a/assignment 2/styles.css
+++ b/assignment 2/styles.css
@@ -1,5 +1,143 @@
 .container{
-    display: flex;
-    flex-direction: column;
-    padding:50px;
+    margin:50px;
+    line-height: 25px;
+    word-spacing: 5px;
 }
+.main{
+    
+    border:1px ridge gray;
+    padding: 15px;
+    background-color: #d6e0f0;
+}
+body{
+    background-color: #8d93ab;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#head1{
+    font-family: 'Courier New', Courier, monospace;
+}
+#head2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#head3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#head4{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#head5{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.align-center{
+    text-align: center;
+    align-items: center;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+code{
+    padding: 10px;
+    background-color: gray;
+}
+
+.heading{
+    color: white;
+    justify-content: center;
+}
+.navbar{
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    position: fixed;
+    background-color: #393b44;
+}
+.nav-items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #393b44;
+  }
+  
+ .nav-item {
+    float: left;
+  }
+#heading{
+    font-size: 2em;
+    font-weight: bold;
+}
+.nav-item a {
+    display: block;
+    color: white;
+    
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+.nav-item a:hover {
+    background-color: #111;
+  }
+
+h1, h2, h3, h4{
+    color: #1d2d50;
+}
+
+table, th,td {
+    border-collapse: collapse;
+    
+    border: 3px solid #ddd;
+    text-align: center;
+    padding: 8px;
+    box-shadow: 5px 5px 5#393b44 ;
+      
+      
+  }
+  .table{
+    border: 3px solid #ddd;
+    box-sizing: border-box;
+  }
+  table {
+    padding: 15px;
+    font-family: arial, sans-serif;
+    background-color:#f1f3f8;
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+  }
+
+  #head{
+    text-align: center;
+    font-size: 1.8em;
+    font-weight: 400;
+    padding: 40px;
+    justify-content: center;
+  }
+
+  td > a{
+      color: #19d3da;
+      text-decoration: none;
+  }
+  td > i{
+      color: black;
+  }
+  .black{
+      color: #7579e7;
+  }
+  .img{
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+  }
+  #head2{
+    text-align: center;
+    font-size: 2em;
+  }
